@startuml class-diagram

hide empty members

!theme blueprint
!pragma useIntermediatePackages false

package "io.github.masmangan.assis" {
  class "io.github.masmangan.assis.AssisApp" <<final>> {
    - {static} DOCS_UML_CLASS_DIAGRAM_PUML : String {final}
    - {static} SRC_MAIN_JAVA : String {final}
    - <<create>> AssisApp()
    + main(args : String[]) : void {static}
  }
  class "io.github.masmangan.assis.CollectRelationshipsVisitor" {
    - {static} HAS_A : String {final}
    - {static} IS_A_EXTENDS : String {final}
    - {static} IS_A_IMPLEMENTS : String {final}
    ~ <<create>> CollectRelationshipsVisitor(idx : DeclaredIndex)
    - ownerFqnOf(fqn : String) : String {static}
    - rawNameOf(type : Type) : String
    - resolveAssocTarget(pkg : String, ownerFqn : String, type : Type) : String
    - peelArrays(type : Type) : Type
    ~ emitAll(pw : PlantUMLWriter) : void
    - emitAssociation(pw : PlantUMLWriter, ownerFqn : String, targetFqn : String, role : String, stereotypes : String) : void
    - emitAssociations(pw : PlantUMLWriter, pkg : String, ownerFqn : String, td : TypeDeclaration<?>) : void
    - emitExtends(pw : PlantUMLWriter, pkg : String, subFqn : String, ext : ClassOrInterfaceType) : void
    - emitExtendsImplements(pw : PlantUMLWriter, pkg : String, subFqn : String, td : TypeDeclaration<?>) : void
    - emitFieldAssociation(pw : PlantUMLWriter, pkg : String, ownerFqn : String, fd : FieldDeclaration) : void
    - emitImplements(pw : PlantUMLWriter, pkg : String, subFqn : String, impl : ClassOrInterfaceType) : void
    - emitRecordParameterAssociation(pw : PlantUMLWriter, pkg : String, ownerFqn : String, p : Parameter) : void
  }
  class "io.github.masmangan.assis.CollectTypesVisitor" {
    - pkg : String {final}
    ~ <<create>> CollectTypesVisitor(idx : DeclaredIndex, pkg : String)
    - assocTypeFrom(ownerFqn : String, vd : VariableDeclarator) : String
    - emitConstructors(pw : PlantUMLWriter, ctors : List<ConstructorDeclaration>) : void
    - emitEnumConstants(pw : PlantUMLWriter, ed : EnumDeclaration) : void
    - emitFields(pw : PlantUMLWriter, ownerFqn : String, fields : List<FieldDeclaration>) : void
    - emitMethods(pw : PlantUMLWriter, methods : List<MethodDeclaration>) : void
    - emitRecordComponents(pw : PlantUMLWriter, ownerFqn : String, rd : RecordDeclaration) : void
    ~ emitType(pw : PlantUMLWriter, fqn : String, td : TypeDeclaration<?>) : void
    - emitVariableDeclarator(pw : PlantUMLWriter, ownerFqn : String, fd : FieldDeclaration, vd : VariableDeclarator) : void
  }
  class "io.github.masmangan.assis.DeclaredIndex" {
    - {static} PACKAGE_SEPARATOR : String {final}
    ~ byFqn : Map<String,TypeDeclaration<?>> {final}
    ~ fqnsByPkg : Map<String,List<String>>
    ~ pkgByFqn : Map<String,String> {final}
    ~ uniqueBySimple : Map<String,String> {final}
    ~ build(cus : List<CompilationUnit>) : DeclaredIndex {static}
    ~ sortPackagesByNameFqn(byPkg : Map<String,List<String>>) : Map<String,List<String>> {static}
    ~ pumlName(fqn : String) : String
    ~ qPuml(fqn : String) : String
    ~ resolveTypeName(ownerPkg : String, rawName : String) : String
    - collectTypeRecursive(idx : DeclaredIndex, pkg : String, td : TypeDeclaration<?>, ownerFqn : String, separator : String) : void {static}
  }
  class "io.github.masmangan.assis.GenerateClassDiagram" {
    ~ {static} logger : Logger {final}
    - <<create>> GenerateClassDiagram()
    - scanSources(src : Path) : List<CompilationUnit> {static}
    ~ stereotypesOf(n : NodeWithAnnotations<?>) : List<String> {static}
    - assisLine() : String {static}
    ~ getFlags(method : MethodDeclaration) : String {static}
    ~ renderStereotypes(ss : List<String>) : String {static}
    ~ simpleName(qname : String) : String {static}
    - versionOrDev() : String {static}
    ~ visibility(n : NodeWithAccessModifiers<?>) : String {static}
    - addFooter(pw : PlantUMLWriter) : void {static}
    - addHeader(pw : PlantUMLWriter) : void {static}
    + generate(src : Path, out : Path) : void {static}
    - writeDiagram(out : Path, idx : DeclaredIndex) : void {static}
  }
  class "io.github.masmangan.assis.PlantUMLWriter" {
    - indent : int
    - out : PrintWriter {final}
    + <<create>> PlantUMLWriter(out : PrintWriter)
    - q(name : String) : String {static}
    - st(stereotypes : String) : String {static}
    + beginAbstractClass(name : String, stereotypes : String) : void
    + beginAnnotation(name : String, stereotypes : String) : void
    + beginClass(name : String, stereotypes : String) : void
    + beginEnum(name : String, stereotypes : String) : void
    + beginInterface(name : String, stereotypes : String) : void
    + beginPackage(name : String) : void
    + beginRecord(name : String, stereotypes : String) : void
    + close() : void <<Override>>
    + dedent() : void
    + endPackage() : void
    + endType() : void
    + flush() : void
    + indent() : void
    + print(text : String) : void
    + println() : void
    + println(line : String) : void
  }
}
"io.github.masmangan.assis.CollectRelationshipsVisitor" --> "io.github.masmangan.assis.DeclaredIndex" : idx
"io.github.masmangan.assis.CollectTypesVisitor" --> "io.github.masmangan.assis.DeclaredIndex" : idx

left to right direction

' Generated with ASSIS (Java -> UML)
' https://github.com/masmangan/assis

@enduml
